--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 12.22.8
+          node-version: 18.12.1
       - name: Install dependence
-        run: yarn install
+        run: yarn install --ignore-platform
       - name: Run a multi-line script
         run: |
           yarn build
