--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --watchAll=false",
     "eject": "react-app-rewired eject",
-    "husky:init": "husky install",
-    "prepare": "node ./scripts/prepare.js"
+    "husky:init": "husky install"
   },
   "jest": {
     "displayName": "Unit Test"
