--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-i18next": "11.11.4",
     "react-outside-click-handler": "^1.3.0",
     "react-query": "3.39.1",
+    "react-resize-detector": "7.1.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
