--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "4.24.5",
     "axios": "0.21.4",
     "bignumber.js": "9.0.1",
+    "camelcase": "7.0.0",
     "camelcase-keys": "7.0.0",
     "classnames": "2.3.2",
     "dayjs": "1.11.5",
