--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@nervosnetwork/ckb-sdk-utils": "0.103.1",
+    "@sentry/react": "7.38.0",
+    "@sentry/tracing": "7.38.0",
     "antd": "4.24.5",
     "axios": "0.21.4",
     "bignumber.js": "9.0.1",
@@ -30,6 +32,7 @@
     "three": "0.149.0"
   },
   "devDependencies": {
+    "@sentry/webpack-plugin": "1.20.0",
     "@types/echarts": "4.9.9",
     "@types/enzyme": "^3.10.9",
     "@types/enzyme-adapter-react-16": "^1.0.6",
