--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "4.8.0",
     "@nervosnetwork/ckb-sdk-utils": "0.103.1",
     "@sentry/react": "7.38.0",
     "@sentry/tracing": "7.38.0",
     "antd": "4.24.5",
     "axios": "0.21.4",
     "bignumber.js": "9.0.1",
+    "camelcase": "7.0.0",
     "camelcase-keys": "7.0.0",
     "classnames": "2.3.2",
     "dayjs": "1.11.5",
